// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default message 1`] = `
<div
  className="LoadingSignal__spinning"
>
  loading...
</div>
`;

exports[`supplied messages 1`] = `
<div
  className="LoadingSignal__spinning"
>
  <ul>
    <li>
      msg1
    </li>
    <li>
      msg2
    </li>
  </ul>
</div>
`;
